刑事訴訟法 2007.6.15

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -70,9 +70,9 @@
 
 * 32 被告有數辯護人者，送達文書應分別為之。
 
-* 33 辯護人於審判中得檢閱卷宗及證物並得抄錄或攝影。
+* 33 辯護人於審判中得檢閱卷宗及證物並得抄錄或攝影。無辯護人之被告於審判中得預納費用請求付與卷內筆錄之影本。但筆錄之內容與被告被訴事實無關或足以妨害另案之偵查，或涉及當事人或第三人之隱私或業務秘密者，法院得限制之。
 
-> 釋：依刑事訴訟法第二百四十五條之規定，偵查不公開之，如許偵查中選任之辯護人對於卷宗及證物檢閱、抄錄或攝影，則不僅實質上有損偵查不公開之原則，且難免影響偵查之正常進行，自不應准許。爰修正本條增列「在審判中」四字，以示辯護人檢閱卷宗證物及抄錄或攝影，以審判程序中者為限。
+> 釋：一、第一項未修正。二、在改良式當事人進行主義之訴訟架構下，證據之提出與交互詰問之進行，均由當事人主導，而依現行本法規定，被告有辯護人者，得經由其辯護人閱卷，以利防禦權之行使，被告無辯護人者，既同有行使防禦權之必要，自應適當賦予無辯護人之被告閱錄卷證之權利。惟因被告本身與審判結果有切身利害關係，如逕將全部卷證交由被告任意翻閱，將有必須特別加強卷證保護作為之勞費，其被告在押者，且將增加提解在押被告到法院閱卷所生戒護人力之沈重負擔，為保障無辯護人之被告防禦權，並兼顧司法資源之有效運用，爰增訂第二項前段，明定無辯護人之被告得預納費用請求付與卷內筆錄之影本。至筆錄以外之文書等證物，仍應經由法官於審判中依法定調查證據方法，使無辯護人之被告得知其內容，俾能充分行使其防禦權，併予敘明。三、又筆錄之內容如與被告被訴事實無關或足以妨害另案之偵查、或當事人或第三人之隱私或業務秘密者，為免徒增不必要之閱卷勞費、妨害另案之偵查、或他人之隱私資料或業務秘密，允宜由法院得就前開閱卷範圍及方式為合理之限制，爰增訂第二項但書。
 
 * 34 辯護人得接見犯罪嫌疑人及羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制之。
 
@@ -306,9 +306,9 @@
 
 > 釋：一、第一項不修正。二、偵查中之被告，卷證均在檢察署，其羈押原因是否消滅，檢察官最為清楚，爰增列第二項。三、縱使在審判中，檢察官仍具有維持公訴以及上訴之利益存在，故法院於決定撤銷或停止羈押時，不僅是偵查中，在審判中也應該要徵詢檢察官的意見。
 
-* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，經法院依第一百零一條或第一百零一條之一之規定訊問被告後，以裁定延長之。在偵查中延長羈押期間，應由檢察官附具體理由，至遲於期間屆滿之五日前聲請法院裁定。前項裁定，除當庭宣示者外，於期間未滿前以正本送達被告者，發生延長羈押之效力。羈押期滿，延長羈押之裁定未經合法送達者，視為撤銷羈押。審判中之羈押期間，自卷宗及證物送交法院之日起算。起訴或裁判後送交前之羈押期間算入偵查中或原審法院之羈押期間。羈押期間自簽發押票之日起算。但羈押前之逮捕、拘提期間，以一日折算裁判確定前之羈押日數一日。延長羈押期間，偵查中不得逾二月，以延長一次為限。審判中每次不得逾二月，如所犯最重本刑為十年以下有期徒刑以下之刑者，第一審、第二審以三次為限。第三審以一次為限。案件經發回者，其延長羈押期間之次數，應更新計算。羈押期間已滿未經起訴或裁判者，視為撤銷羈押，檢察官或法院應將被告釋放；由檢察官釋放被告者，並應即時通知法院。
+* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，經法院依第一百零一條或第一百零一條之一之規定訊問被告後，以裁定延長之。在偵查中延長羈押期間，應由檢察官附具體理由，至遲於期間屆滿之五日前聲請法院裁定。前項裁定，除當庭宣示者外，於期間未滿前以正本送達被告者，發生延長羈押之效力。羈押期滿，延長羈押之裁定未經合法送達者，視為撤銷羈押。審判中之羈押期間，自卷宗及證物送交法院之日起算。起訴或裁判後送交前之羈押期間算入偵查中或原審法院之羈押期間。羈押期間自簽發押票之日起算。但羈押前之逮捕、拘提期間，以一日折算裁判確定前之羈押日數一日。延長羈押期間，偵查中不得逾二月，以延長一次為限。審判中每次不得逾二月，如所犯最重本刑為十年以下有期徒刑以下之刑者，第一審、第二審以三次為限，第三審以一次為限。案件經發回者，其延長羈押期間之次數，應更新計算。羈押期間已滿未經起訴或裁判者，視為撤銷羈押，檢察官或法院應將被告釋放；由檢察官釋放被告者，並應即時通知法院。依第二項及前項視為撤銷羈押者，於釋放前，偵查中，檢察官得聲請法院命被告具保、責付或限制住居。如認為不能具保、責付或限制住居，而有必要者，並得附具體理由一併聲請法院依第一百零一條或第一百零一條之一之規定訊問被告後繼續羈押之。審判中，法院得命具保、責付或限制住居；如不能具保、責付或限制住居，而有必要者，並得依第一百零一條或第一百零一條之一之規定訊問被告後繼續羈押之。但所犯為死刑、無期徒刑或最輕本刑為七年以上有期徒刑之罪者，法院就偵查中案件，得依檢察官之聲請；就審判中案件，得依職權，逕依第一百零一條之規定訊問被告後繼續羈押之。前項繼續羈押之期間自視為撤銷羈押之日起算，以二月為限，不得延長。繼續羈押期間屆滿者，應即釋放被告。第一百十一條、第一百十三條、第一百十五條、第一百十六條、第一百十六條之二、第一百十七條、第一百十八條第一項、第一百十九條之規定，於第八項之具保、責付或限制住居準用之。
 
-> 釋：一、偵查中延長羈押期間，為期慎重，確保人權，爰修正為應由檢察官附具體理由，至遲於期間屆滿五日前聲請法院裁定，法院應依第一百零一條訊問被告後，始得裁定延長羈押期間。二、延長羈押期間之裁定，除當庭宣示者外，須於期間屆滿前以正本送達被告後，始發生延長羈押之效力。三、審判中之羈押期間，究應自何時起算，現行法未設明文，爰增訂自卷宗及證物送交法院之日起算之規定，並規定起訴或裁判後送交前之羈押期間算入偵查中或原審法院之羈押期間，以免適用上發生疑義。
+> 釋：一、第一項至第七項未修正。二、按羈押期滿，延長羈押之裁定未經合法送達，或延長羈押期間之裁定未經宣示，而未於期間屆滿前送達被告；或羈押期滿未經起訴或裁判，依第二項、第七項規定視為撤銷羈押者，多有出於人為之疏失者，若因此造成重大刑事案件之被告得以無條件釋放，致生社會治安之重大危害，殊非妥適，允宜在法制上謀求補救之道。三、被告因上述原因視為撤銷羈押者，將來受有罪判決之可能性仍甚高，法院對該被告得為一定保全措施之必要性，較諸已就被告諭知無罪者為強，而後者依第三百十六條規定，於上訴期間或上訴中既得命具保、責付或限制住居，如不能具保、責付或限制住居，而有必要情形，並得繼續羈押之，則對於因上述原因而視為撤銷羈押者，爰參照第三百十六條規定意旨，明定得對被告實施保全措施。四、偵查中發生上開視為撤銷羈押事由，檢察官如認有具保、責付、限制住居或繼續羈押之必要者，自應聲請法院裁定。又被告因不能具保、責付或限制住居，而有繼續羈押必要之情形，事所恆有，關於視為撤銷羈押後，由檢察官為此聲請之案件，如有不能具保、責付或限制住居而須繼續羈押者，為避免程序之周折，應許檢察官得附具體理由，一併聲請羈押，爰增訂第八項前段規定。五、被告所犯為死刑、無期徒刑或最輕本刑為七年以上有期徒刑之罪者，例如殺人、製造手槍、販賣第一級毒品、加重強制性交、傷害致死、妨害自由致死、搶奪致死、強盜致重傷、加重強盜、擄人勒贖等等，均屬重大危害社會治安之罪，如僅因人為疏失而予交保、責付或限制住居在外，對社會治安及後續偵查、審判及執行程序之進行，將有重大不利影響，爰增訂第八項但書，規定該等案件於偵查或審理中發生上述視為撤銷羈押事由，不以先命具保、責付或限制住居為必要，對於偵查中案件，法院得依檢察官聲請；對於審判中案件，得依職權逕依第一百零一條之規定訊問被告後繼續羈押之。六、因第二項及第七項之未及時送達延長羈押裁定正本及未即時裁定延長羈押而視為撤銷羈押，依增訂第八項所為繼續羈押，其期間及計算需有明確規定；由於此種保全措施究屬不得已之例外，於繼續羈押之同時，自應就該案件集中偵查或審理，妥速終結，一旦繼續羈押期間屆滿仍未起訴或送交管轄法院者，自應即時釋放被告，不得再行延長其羈押期間，爰增訂第九項。七、第五項係偵查中或同一審級最長羈押期限之基本規定，依增訂第八項所為之繼續羈押，連同先前已為羈押之總期間，須受第五項偵查中或同一審級最長羈押期限之限制，乃屬當然。八、視為撤銷羈押後之命具保、責付或限制住居，應有一定規範，爰增訂第十項，明定準用第一百十一條、第一百十三條、第一百十五條、第一百十六條、第一百十六條之二、第一百十七條、第一百十八條、第一百十九條之規定，以資適用。
 
 * 109 案件經上訴者，被告羈押期間如已逾原審判決之刑期者，應即撤銷羈押，將被告釋放。但檢察官為被告之不利益而上訴者，得命具保、責付或限制住居。
 
@@ -1326,7 +1326,9 @@
 
 * 343 自訴程序，除本章有特別規定外，準用第二百四十六條、第二百四十九條及前章第二節、第三節關於公訴之規定。
 
-* 344 當事人對於下級法院之判決有不服者，得上訴於上級法院；如自訴人於辯論終結後喪失行為能力或死亡者，得由第三百十九條第一項所列得為提起自訴之人上訴。告訴人或被害人對於下級法院之判決有不服者，亦得具備理由，請求檢察官上訴，除顯無理由者外，檢察官不得拒絕。檢察官為被告之利益，亦得上訴。宣告死刑或無期徒刑之案件，原審法院應不待上訴依職權逕送該管上級法院審判，並通知當事人。前項情形，視為被告已提起上訴。
+* 344 當事人對於下級法院之判決有不服者，得上訴於上級法院。自訴人於辯論終結後喪失行為能力或死亡者，得由第三百十九條第一項所列得為提起自訴之人上訴。告訴人或被害人對於下級法院之判決有不服者，亦得具備理由，請求檢察官上訴。檢察官為被告之利益，亦得上訴。宣告死刑或無期徒刑之案件，原審法院應不待上訴依職權逕送該管上級法院審判，並通知當事人。前項情形，視為被告已提起上訴。
+
+> 釋：照黨團協商條文通過。
 
 * 345 被告之法定代理人或配偶，得為被告之利益獨立上訴。
 
@@ -1346,7 +1348,9 @@
 
 * 353 當事人得捨棄其上訴權。
 
-* 354 上訴於判決前，得撤回之。
+* 354 上訴於判決前，得撤回之。案件經第三審法院發回原審法院，或發交與原審法院同級之他法院者，亦同。
+
+> 釋：一、刑事案件之上訴人撤回第二審上訴，應於第二審判決前為之。是案件經第三審法院發回原審法院，或發交與原審法院同級之他法院者，因該案件曾經第二審判決，已不符於第二審判決前撤回之條件，如再准予撤回第二審上訴，與現行條文規定不合。故經第三審發回更審後，即不得撤回原第二審上訴，此為現今實務上所持之見解（司法院院字第六八二號、院字第九八三號、院字第一三六三號等解釋及最高法院四十六年台上字第四八六號判例參照）。二、惟我國刑事訴訟制度已由職權進行主義改採改良式當事人進行主義，如容許上訴人於更審程序中得撤回上訴，以尊重其意願，強化當事人之訴訟自主權，自較合乎改良式當事人進行主義之原則，並兼顧訴訟經濟。況且當事人既信服第一審判決而自願撤回第二審上訴，法院亦無強令其續行訴訟之理。爰參考民事訴訟法第四百五十九條第一項前段規定，修正本條，俾上訴人於經第三審發回原審法院，或發交與原審法院同級之他法院審理中，均仍得撤回上訴。
 
 * 355 為被告之利益而上訴者，非得被告之同意，不得撤回。
 
@@ -1360,7 +1364,9 @@
 
 * 360 捨棄上訴權或撤回上訴，書記官應速通知他造當事人。
 
-* 361 不服地方法院之第一審判決而上訴者，應向管轄第二審之高等法院為之。
+* 361 不服地方法院之第一審判決而上訴者，應向管轄第二審之高等法院為之。上訴書狀應敘述具體理由。上訴書狀未敘述上訴理由者，應於上訴期間屆滿後二十日內補提理由書於原審法院。逾期未補提者，原審法院應定期間先命補正。
+
+> 釋：一、第一項未修正。二、提起第二審上訴之目的，在於請求第二審法院撤銷、變更原判決，自須提出具體理由。爰增訂第二項，明定上訴書狀應敘述具體理由。又因目前第二審並非如第三審係法律審，故上訴理由無須如第三百七十七條規定以原判決違背法令為限，乃屬當然。三、上訴書狀必須具備理由，雖為上訴必備之程式，惟上訴書狀未記載理由者，亦不宜逕生影響上訴權益之效果，爰增訂第三項，明定得於上訴期間屆滿後二十日內自行補提理由書於原審法院，以保障其權益。又原審法院對上訴書狀有無記載理由，應為形式上之審查，認有欠缺，且未據上訴人自行補正者，應定期間先命補正，爰於第三項後段明定。至上訴理由是否具體，係屬第二審法院審查範圍，不在命補正之列。又雖已逾法院裁定命補正期間，並不當然發生失權效果，在法院尚未據以為裁判前，仍得提出理由書狀以為補正，乃屬當然，均一併敘明。
 
 * 362 原審法院認為上訴不合法律上之程式或法律上不應准許或其上訴權已經喪失者，應以裁定駁回之。但其不合法律上之程式可補正者，應定期間先命補正。
 
@@ -1372,7 +1378,9 @@
 
 * 366 第二審法院，應就原審判決經上訴之部分調查之。
 
-* 367 第二審法院認為上訴有第三百六十二條前段之情形者，應以判決駁回之。但其情形可以補正而未經原審法院命其補正者，審判長應定期間先命補正。
+* 367 第二審法院認為上訴書狀未敘述理由或上訴有第三百六十二條前段之情形者，應以判決駁回之。但其情形可以補正而未經原審法院命其補正者，審判長應定期間先命補正。
+
+> 釋：因第三百六十一條第三項已明定上訴書狀未敘述理由者，應於上訴期間屆滿後二十日內自行補提理由書狀於原審法院，未補提者，應由原審法院定期間先命補正。惟上訴人如未自行補提理由書狀，亦未經原審法院裁定命補正者，仍宜由第二審法院審判長定期間先命補正，必逾期仍不補正者，始予判決駁回，爰配合修正本條。
 
 * 368 第二審法院認為上訴無理由者，應以判決駁回之。
 
@@ -1588,9 +1596,9 @@
 
 > 釋：照黨團協商條文通過。
 
-* 455.1 對於簡易判決有不服者，得上訴於管轄之第二審地方法院合議庭。依第四百五十一之一之請求所為之科刑判決，不得上訴。第一項之上訴，準用第三編第一章及第二章之規定。對於適用簡易程序案件所為裁定有不服者，得抗告於管轄之第二審地方法院合議庭。前項之抗告，準用第四編之規定。
+* 455.1 對於簡易判決有不服者，得上訴於管轄之第二審地方法院合議庭。依第四百五十一條之一之請求所為之科刑判決，不得上訴。第一項之上訴，準用第三編第一章及第二章除第三百六十一條外之規定。對於適用簡易程序案件所為裁定有不服者，得抗告於管轄之第二審地方法院合議庭。前項之抗告，準用第四編之規定。
 
-> 釋：一、對於簡易判決不服者，規定由地方法院合議庭審判，以減輕高等法院之負荷，並與民事訴訟簡易訴訟程序之上訴係由地方法院合議庭審判之修正案相為配合。二、為加強運用簡易程序，當事人依第四百五十一條之一表示願受科刑範圍或求刑範圍內科刑者，各該當事人允宜不得上訴。三、對簡易判決不服上訴者，其程序允宜增設準用之規定，以資明確。
+> 釋：一、第一項、第二項、第四項及第五項均未修正。二、修正條文第三百六十一條第二項、第三項規定不服地方法院第一審判決而提起上訴者，其上訴書狀應敘述具體理由；未敘述具體理由者，應於法定期間補提理由書。法院逕以簡易判決處刑之案件，既可不經開庭程序，且簡易判決書之記載較為簡略，其上訴程式宜較依通常程序起訴之案件簡便，俾由第二審地方法院合議庭審查原簡易判決處刑有無不當或違法，故對簡易判決提起上訴，應不能準用第三百六十一條第二項、第三項規定。又依第四百五十五條之一第一項規定，對於簡易判決有不服者，係上訴於管轄之第二審地方法院合議庭，第三百六十一條第一項之規定，亦無準用餘地，爰修正第三項，將第三百六十一條規定，排除在準用之列。對簡易判決之上訴，既然不準用第三百六十一條第二項、第三項之規定，則修正條文第三百六十七條規定中關於逾第三百六十一條第三項規定之期間未提上訴理由，第二審法院可不經言詞辯論逕以判決駁回上訴部分，當然不在準用之列，無待明文，併予敘明。
 
 * 455.11 協商判決之上訴，除本編有特別規定外，準用第三編第一章及第二章之規定。第一百五十九條第一項、第二百八十四條之一之規定，於協商程序不適用之。
 
