法院組織法 2007.6.15

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -20,7 +20,7 @@
 
 * 11 地方法院或其分院之類別及員額，依附表之規定。各地方法院或其分院應適用之類別及其變更，由司法院定之。
 
-> 釋：條文本文不修正，修正附表書記官及通譯之職稱。
+> 釋：條文本文不修正，附表增列司法事務官職稱及員額。
 
 * 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等；試署法官，薦任第七職等至第九職等；候補法官，薦任第六職等至第八職等。實任法官繼續服務十年以上，成績優良，經審查合格者，得晉敘至簡任第十二職等至第十三職等；繼續服務十五年以上，成績優良，經審查合格者，得晉敘至簡任第十二職等至第十四職等。前項簡任第十四職等法官員額，不得逾地方法院實任法官總額三分之一。第二項晉敘法官之資格、審查委員會之組成、審查程序及限制不得申請晉敘情形等事項之審查辦法，由司法院定之。司法院因應地方法院業務需要，得調候補法官至地方法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。地方法院於必要時，得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。候補法官調地方法院辦事期間，計入其候補法官年資。具律師執業資格者，經聘用充任法官助理期間，計入其律師執業年資。法官助理之遴聘、訓練、業務、管理及考核等相關事項，由司法院以命令定之。
 
@@ -34,9 +34,11 @@
 
 > 釋：一、第一項不修正。二、為使富有第二審辦案經驗之優秀法官，樂於回任第一審法官或兼任庭長、院長，俾發揮事實審之功能，爰修正第二項，將曾任高等法院或其分院法官四年以上，修正為二年以上，以縮短職期，妥速建構完善之訴訟制度。
 
-* 16 地方法院設民事執行處，由法官辦理其事務，其法官在二人以上者，由一人兼任庭長，簡任第十職等至第十一職等或薦任第九職等，監督該處事務。
+* 16 地方法院設民事執行處，由法官或司法事務官辦理其事務；其法官在二人以上者，由一人兼任庭長，簡任第十職等至第十一職等或薦任第九職等，監督該處事務。
 
-* 17 地方法院設公設辯護人室，置公設辯護人，薦任第七職等至第九職等。其公設辯護人在二人以上者，置主任公設辯護人，薦任第九職等或簡任第十職等至第十一職等。
+> 釋：照黨團協商條文通過。
+
+* 17 地方法院設公設辯護人室，置公設辯護人，薦任第七職等至第九職等或簡任第十職等至第十一職等；其公設辯護人在二人以上者，置主任公設辯護人，薦任第九職等或簡任第十職等至第十二職等。實任公設辯護人服務滿十五年以上，成績優良，經審查合格者，得晉
 
 * 18 地方法院設觀護人室，置觀護人；觀護人在二人以上者，置主任觀護人。觀護人，薦任第七職等至第九職等；主任觀護人，薦任第九職等或簡任第十職等。
 
