刑事訴訟法 2007.11.21

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -360,9 +360,9 @@
 
 > 釋：本條刪除，另行增訂為第一百零一條之一。
 
-* 121 第一百零七條第一項之撤銷羈押、第一百零九條之命具保、責付或限制住居、第一百十條第一項、第一百十五條及第一百十六條之停止羈押、第一百十八條第一項之沒入保證金、第一百十九條第二項之退保，以法院之裁定行之。案件在第三審上訴中，而卷宗及證物已送交該法院者，前項處分由第二審法院裁定之。第二審法院於為前項裁定前，得向第三審法院調取卷宗及證物。檢察官依第一百十八條第二項之沒入保證金、第一百十九條第二項之退保及第九十三條第三項但書、第二百二十八條第四項命具保、責付或限制住居，於偵查中以檢察官之命令行之。
+* 121 第一百零七條第一項之撤銷羈押、第一百零九條之命具保、責付或限制住居、第一百十條第一項、第一百十五條及第一百十六條之停止羈押、第一百十八條第一項之沒入保證金、第一百十九條第二項之退保，以法院之裁定行之。案件在第三審上訴中，而卷宗及證物已送交該法院者，前項處分、羈押及其他關於羈押事項之處分，由第二審法院裁定之。第二審法院於為前項裁定前，得向第三審法院調取卷宗及證物。檢察官依第一百十八條第二項之沒入保證金、第一百十九條第二項之退保及第九十三條第三項但書、第二百二十八條第四項命具保、責付或限制住居，於偵查中以檢察官之命令行之。
 
-> 釋：配合本法於民國九十年一月十二日修正第二百二十八條而修正本條相關項次。
+> 釋：一、第一項、第三項及第四項均未修正。二、羈押被告依現行刑事訴訟法第一百零一條、第一百零一條之一及第一百零一條之二規定，除須具備羈押原因及必要外，尚須經法官之訊問。惟第三審為法律審，不為事實之調查，被告是否有羈押之原因及必要，自應由事實審調查審認。倘案件已上訴於第三審，卷證並送交該法院時，為免違背第三審為法律審之原則，並探究本條第二項、第三項、第三百六十三條及第三百八十五條之立法精神，關於羈押之處分，仍由事實審之第二審法院為之為宜，現行軍事審判法第一百零九條第二項即為如是規定。爰參酌最高法院九十五年度第三次刑事庭會議決議及軍事審判法上開規定，明定案件在第三審上訴中，而卷宗及證物已送交該法院者，羈押及其他關於羈押事項之處分，由第二審法院裁定之，以臻明確。
 
 * 122 對於被告或犯罪嫌疑人之身體、物件、電磁紀錄及住宅或其他處所，必要時得搜索之。對於第三人之身體、物件、電磁紀錄及住宅或其他處所，以有相當理由可信為被告或犯罪嫌疑人或應扣押之物或電磁紀錄存在時為限，得搜索之。
 
