民事訴訟法 2007.12.7

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -302,9 +302,9 @@
 
 > 釋：一、本條係新增。二、本法第四十四條之二及第四十四條之三之訴訟型態，宜比照消費者保護法規定減免徵收裁判費，爰訂定第一項規定依第四十四條之二請求賠償之人，其訴訟費用超過六十萬元之部分暫免徵收；第二項規定依第四十四條之三規定請求者，免徵裁判費。三、關於暫免徵收裁判費者，於事件確定後，應有徵收規定，爰增訂第三項規定於該事件確定後，第一審法院應依職權裁定向負擔訴訟費用之一造徵收之。
 
-* 77.23 訴訟文書之影印費、攝影費、抄錄費、翻譯費，證人、鑑定人之日費、旅費及其他進行訴訟之必要費用，其項目及標準由司法院定之。運送費、登載公報新聞紙費及法院核定之鑑定人報酬，依實支數計算。命當事人預納之前二項費用，應專就該事件所預納之項目支用。郵電送達費及法官、書記官、執達員、通譯於法院外為訴訟行為之食、宿、舟、車費，不另徵收。
+* 77.23 訴訟文書之影印費、攝影費、抄錄費、翻譯費，證人、鑑定人之日費、旅費及其他進行訴訟之必要費用，其項目及標準由司法院定之。運送費、登載公報新聞紙費及法院核定之鑑定人報酬，依實支數計算。命當事人預納之前二項費用，應專就該事件所預納之項目支用，並得由法院代收代付之。有剩餘者，應於訴訟終結後返還繳款人。郵電送達費及法官、書記官、執達員、通譯於法院外為訴訟行為之食、宿、舟、車費，不另徵收。
 
-> 釋：一、本條新增。二、原民事訴訟費用法第二十四條、第二十五條及第二十七條分別就抄錄費、翻譯費、到庭費、滯留費及食、宿、舟、車費定其計算標準，其標準與實際情形多已不能配合，且所規定之項目亦不周全，爰於第一項概括規定上述費用及其他進行訴訟之必要費用，其項目及標準由司法院定之，俾便於配合實際情形，適時調整，以利適用。訴訟文書之抄錄，亦得依影印或攝影方式為之，爰併列舉影印費、攝影費，以資周全。又原條文所定證人等之到庭費、滯留費及食、宿、舟、車費，即民事訴訟法第三百二十三條第一項、第三百三十八條所定之日費及旅費，爰修正為「日費及旅費」，以統一其用語。至同法第二百零七條所定之通譯，依同條第三項準用鑑定人之規定，關於其日費、旅費及報酬，當然亦在準用範圍，無待明文。三、第二項係原民事訴訟費用法第二十六條移列修正。為簡化訴訟文書逐件封貼郵票之作業方式，減輕當事人購買郵票及法院登記、核算、催補、退還郵票之勞費，爰將原條文所規定之郵電費項目刪除，併入裁判費徵收。四、為保障當事人訴訟程序上之權益，避免當事人預納之進行訴訟之必要費用，因預算制度統收統支之原則而移作他用，爰增訂第三項，明定當事人預納之前二項費用，應專就該事件所預納之項目支用。五、法官、書記官、通譯、執達員等法院職員出外調查證據、送達文書或為其他訴訟行為之食、宿、舟、車費，如由當事人另行支付，常引起當事人對法院公正性之懷疑，為提昇司法威信，上開費用宜包含於裁判費之中，不另徵收。為免爭議，爰增訂第四項明定之。至於修正後法院應按民事事件之需要，編列預算，由國庫負擔，並核實報支上述費用，乃屬當然。
+> 釋：一、本法於92年2月7日增訂本條第三項時，於修正理由中已載明「為保障當事人訴訟程序上之權益，避免當事人預納之進行訴訟之必要費用，因預算制度統收統支之原則而移作他用，爰增訂第三項，明定當事人預納之前二項費用，應專就該事件所預納之項目支用」。二、當事人因特定事件所繳納之費用，係為完成該項法律行為所必要之費用，自得由法院代收代付，始符實際；且當事人所預納之費用，如有剩餘，亦應於訴訟終結後返還繳款人，始屬合理，故修正第三項規定。
 
 * 77.24 當事人、法定代理人或其他依法令代當事人為訴訟行為之人，經法院命其於期日到場或依當事人訊問程序陳述者，其到場之費用為訴訟費用之一部。前項費用額之計算，準用證人日費、旅費之規定。
 
