中華民國刑法 2007.12.18

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -528,9 +528,9 @@
 
 > 釋：一、本條新增。二、以強暴、脅迫或其他非法方法危害飛航之安全或其設施，可能發生重大危險，特增設此犯罪類型，以維護飛航之安全。三、由於此類犯罪，極易導致乘客之死傷，故增設第三項及第四項，分別規定因而致人於死或重傷之結果加重犯及未遂犯之處罰。
 
-* 185.3 服用毒品、麻醉藥品、酒類或其他相類之物，不能安全駕駛動力交通工具而駕駛者，處一年以下有期徒刑、拘役或三萬元以下罰金。
+* 185.3 服用毒品、麻醉藥品、酒類或其他相類之物，不能安全駕駛動力交通工具而駕駛者，處一年以下有期徒刑、拘役或科或併科十五萬元以下罰金。
 
-> 釋：一、本條新增。二、為維護交通安全，增設服用酒類或其他相類之物過量致意識模糊駕駛交通工具之處罰規定，以防止交通事故之發生。
+> 釋：照黨團協商條文通過。
 
 * 185.4 駕駛動力交通工具肇事，致人死傷而逃逸者，處六月以上五年以下有期徒刑。
 
