中華民國刑法 2008.12.30

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -128,9 +128,9 @@
 
 > 釋：一、本條新增。二、修正條文第三十四條第三款增列「追繳、追徵或抵償」為從刑之一，係以法律之規定將犯罪所得，收歸國家所有，避免因該犯罪所得因不符刑法第三十八條沒收之規定，致犯罪行為人仍得於判決確定後享受犯罪之成果，故有自犯罪行為人強制收回之必要。惟無論追繳、追徵或抵償，其所得來自於被害人或他人，故欲將此項所得收歸國家所有，自應以法律規定者，始得追繳、追徵或抵償，以符法律保留之原則。三、本條之規定係屬從刑，依法應附隨於主刑，故應於裁判時一併宣告之，爰明定宣告之時期。
 
-* 41 犯最重本刑為五年以下有期徒刑以下之刑之罪，而受六個月以下有期徒刑或拘役之宣告者，得以新臺幣一千元、二千元或三千元折算一日，易科罰金。但確因不執行所宣告之刑，難收矯正之效，或難以維持法秩序者，不在此限。前項規定於數罪併罰，其應執行之刑未逾六月者，亦適用之。
+* 41 犯最重本刑為五年以下有期徒刑以下之刑之罪，而受六個月以下有期徒刑或拘役之宣告者，得以新臺幣一千元、二千元或三千元折算一日，易科罰金。但確因不執行所宣告之刑，難收矯正之效或難以維持法秩序者，不在此限。依前項規定得易科罰金而未聲請易科罰金者，得以提供社會勞動六小時折算一日，易服社會勞動。受六個月以下有期徒刑或拘役之宣告，不符第一項易科罰金之規定者，得依前項折算規定，易服社會勞動。前二項之規定，因身心健康之關係，執行顯有困難者，或確因不執行所宣告之刑，難收矯正之效或難以維持法秩序者，不適用之。第二項及第三項之易服社會勞動履行期間，不得逾一年。無正當理由不履行社會勞動，情節重大，或履行期間屆滿仍未履行完畢者，於第二項之情形應執行原宣告刑或易科罰金；於第三項之情形應執行原宣告刑。已繳納之罰金或已履行之社會勞動時數依裁判所定之標準折算日數，未滿一日者，以一日論。第一項至第三項規定於數罪併罰，其應執行之刑未逾六個月者，亦適用之。
 
-> 釋：學理上雖有「法定刑」、「處斷刑」、「宣告刑」、「執行刑」等區別，惟第一項所謂受六個月以下有期徒刑或拘役之「宣告」，基於易科罰金應否採行，專屬刑罰之執行技術問題，應指最終應執行之刑之宣告而言，而非指學理所謂「宣告刑」。數罪併罰之各罪，雖均得合於第一項之要件，惟因其最終應執行之刑之宣告，已逾六個月者，其所應執行之自由刑，既非短期自由刑，自無採用易科罰金之轉向處分之理由。爰刪除本項之規定，以符易科罰金制度之本旨。
+> 釋：照黨團協商條文通過。
 
 * 42 罰金應於裁判確定後二個月內完納。期滿而不完納者，強制執行。其無力完納者，易服勞役。但依其經濟或信用狀況，不能於二個月內完納者，得許期滿後一年內分期繳納。遲延一期不繳或未繳足者，其餘未完納之罰金，強制執行或易服勞役。依前項規定應強制執行者，如已查明確無財產可供執行時，得逕予易服勞役。易服勞役以新臺幣一千元、二千元或三千元折算一日。但勞役期限不得逾一年。依第五十一條第七款所定之金額，其易服勞役之折算標準不同者，從勞役期限較長者定之。罰金總額折算逾一年之日數者，以罰金總額與一年之日數比例折算。依前項所定之期限，亦同。科罰金之裁判，應依前二項之規定，載明折算一日之額數。易服勞役不滿一日之零數，不算。易服勞役期內納罰金者，以所納之數，依裁判所定之標準折算，扣除勞役之日期。
 
