民事訴訟法 2009.1.6

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -70,6 +70,14 @@
 
 * 31 移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。前項情形，法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
 
+* 31.1 起訴時法院有受理訴訟權限者，不因訴訟繫屬後事實及法律狀態變更而受影響。訴訟已繫屬於不同審判權之法院者，當事人不得就同一事件向普通法院更行起訴。
+
+> 釋：一、本條新增。二、基於訴訟經濟及程序安定性之考量，受訴法院於起訴時有審判權者，不應因訴訟繫屬後事實及法律狀態變更而變成無審判權（例如原告主張鄉公所設置道路之路面高凸，致其受有損害，而起訴請求鄉公所國家賠償，於訴訟繫屬中，縱使各地方法院成立行政法庭，且國家賠償法第十二條有關適用民事訴訟法之規定亦修訂為適用行政訴訟法，惟此事實及法律狀態之變更並不影響普通法院有受理上開國家賠償訴訟之權限），爰參酌行政訴訟法第十二條之一第一項規定，於第一項明定之。三、當事人就同一事件，已經向不同審判權之法院提起訴訟時，為尊重該法院之處理情形，以及避免裁判分歧，當事人應不得再向普通法院更行起訴。爰參酌行政訴訟法第十二條之一第二項規定，於第二項明定之。
+
+* 31.2 普通法院認其有受理訴訟權限而為裁判經確定者，其他法院受該裁判之羈束。普通法院認其無受理訴訟權限者，應依職權裁定將訴訟移送至有受理訴訟權限之管轄法院。當事人就普通法院有無受理訴訟權限有爭執者，普通法院應先為裁定。前項裁定，得為抗告。普通法院為第二項及第三項之裁定前，應先徵詢當事人之意見。第二十九條、第三十一條規定，於第二項之情形準用之。
+
+> 釋：一、本條新增。二、為儘速確定審判權，如果普通法院已認定其有審判權並進而為裁判經確定者，即不容再由其他審判權法院為相異之認定，應受該裁判之羈束，爰參酌行政訴訟法第十二條之二第一項規定，於第一項明定之。三、為不使訴訟審判權歸屬認定困難之不利益由當事人負擔，如普通法院認其對訴訟無審判權，應依職權裁定移送至有審判權法院，爰參酌司法院釋字第五四○號解釋意旨及行政訴訟法第十二條之二第二項規定，於第二項明定之。四、為使普通法院有無審判權能儘速確定，參酌行政訴訟法第十二條之二第五項規定，於第三項規定如當事人對普通法院有無審判權有爭執者，普通法院應就此部分先為裁定。如普通法院認其無審判權，自應依第二項為之。如普通法院認其有審判權之裁定確定，依第一項之規定，其他法院受該裁定之羈束。且為保障當事人權益，於第四項明定當事人對普通法院上開裁定，得為抗告。五、為保障當事人之程序上權利，以及確保法院關於審判權有無之判斷正確，於第五項規定普通法院為第二項及第三項之裁定前，應先徵詢當事人之意見。六、移送訴訟前如有急迫情形，普通法院應依當事人聲請或依職權為必要之處分；移送之裁定確定時，視為該訴訟自始即繫屬於受移送之法院，而法院書記官應速將裁定正本附入卷宗，送交受移送之法院等節，均與訴訟之全部或一部，法院認為無管轄權，而以裁定移送於其管轄法院之情形相同，故規定本法第二十九條、第三十一條規定，於第二項情形準用之。七、至本條與第一百八十二條之一之關連性如下：若當事人向普通法院提起訴訟時，行政法院已有確定裁判認無受理訴訟之權限，而普通法院之見解與上開行政法院之見解有異時，係依第一百八十二條之一規定辦理；若當事人向普通法院起訴時，行政法院就該訴訟有無受理權限尚未有確定裁判，而普通法院認無受理訴訟之權限時，則依第三十一條之二第二項之規定辦理，併此說明。
+
 * 31.3 其他法院將訴訟移送至普通法院者，依本法定其訴訟費用之徵收。移送前所生之訴訟費用視為普通法院訴訟費用之一部分。應行徵收之訴訟費用，其他法院未加徵收、徵收不足額或溢收者，普通法院應補行徵收或通知原收款法院退還溢收部分。
 
 * 32 法官有下列各款情形之一者，應自行迴避，不得執行職務：一、法官或其配偶、前配偶或未婚配偶，為該訴訟事件當事人者。二、法官為該訴訟事件當事人八親等內之血親或五親等內之姻親，或曾有此親屬關係者。三、法官或其配偶、前配偶或未婚配偶，就該訴訟事件與當事人有共同權利人、共同義務人或償還義務人之關係者。四、法官現為或曾為該訴訟事件當事人之法定代理人或家長、家屬者。五、法官於該訴訟事件，現為或曾為當事人之訴訟代理人或輔佐人者。六、法官於該訴訟事件，曾為證人或鑑定人者。七、法官曾參與該訴訟事件之前審裁判或仲裁者。
@@ -282,9 +290,9 @@
 
 > 釋：一、本條新增。二、本條係原民事訴訟費用法第二十條移列修正。原條文所定之裁判費因社會經濟狀況變遷，顯屬偏低，爰提高為新臺幣一千元，以符實際。
 
-* 77.19 聲請或聲明不徵費用。但下列聲請，徵收裁判費新臺幣一千元：一、聲請參加訴訟或駁回參加。二、聲請回復原狀。三、起訴前聲請證據保全。四、聲請發支付命令。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、聲請宣告禁治產或撤銷禁治產。七、聲請公示催告、除權判決或宣告死亡。
+* 77.19 聲請或聲明不徵收費用。但下列第一款之聲請，徵收裁判費新臺幣五百元；第二款至第七款之聲請，徵收裁判費新臺幣一千元：一、聲請發支付命令。二、聲請參加訴訟或駁回參加。三、聲請回復原狀。四、起訴前聲請證據保全。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、聲請宣告禁治產或撤銷禁治產。七、聲請公示催告、除權判決或宣告死亡。
 
-> 釋：一、本條新增。二、本條係原民事訴訟費用法第二十一條移列修正。原條文所定之裁判費，因社會經濟狀況變遷，顯屬偏低，爰提高為新臺幣一千元，以符實際。三、公示送達係訴訟程序上之問題，有關訴訟程序上之聲請，本法均未規定須另徵裁判費，聲請公示送達亦以不收費為宜。至於依民法第九十七條規定聲請公示送達以代意思表示之通知，係屬非訟事件，應依非訟事件法有關規定收費，原條文第二款無規定之必要。爰將原條文第三款至第六款移列為本條第二款至第五款。四、起訴後聲請證據保全，亦屬訴訟程序上之聲請，不宜另徵裁判費。爰將第三款修正為「起訴前聲請證據保全」。五、第五款原條文規定易被誤解為包括聲請假扣押、假處分之執行，爰於「撤銷假扣押、假處分」下增加「裁定」二字，俾資明確。六、聲請宣告禁治產或撤銷禁治產之裁判費，原條文未定明文，適用上滋生疑義，爰增訂第六款，以利適用。七、聲請宣告死亡事件，究應依第七款規定，或依第七十七條之十四規定收費，解釋上不無疑義，爰於第七款增列「宣告死亡」，以杜爭議。又聲請宣告死亡程序，包括聲請宣告死亡之公示催告及聲請為宣告死亡之判決，其裁判費各為新臺幣一千元，如當事人聲請宣告死亡之公示催告，同時求為宣告死亡之判決，其裁判費應合併徵收新臺幣二千元，乃屬當然。
+> 釋：一、本條於九十二年二月七日修訂時，以社會經濟狀況變遷，原條文所定之裁判費顯屬過低為由，而提高為新臺幣一千元，以符實際。惟於聲請發支付命令部分，提高後之裁判費與提起小額訴訟程序應徵收之裁判費相同，致債權人多以提起小額訴訟程序之方式為之，不但造成當事人之不便，亦增加法院之負擔。二、為提高債權人聲請發支付命令之意願，爰將聲請發支付命令之裁判費由新臺幣一千元修訂為新臺幣五百元，且將原第四款移列為第一款，將原第一款至第三款移列為第二款至第四款。
 
 * 77.2 以一訴主張數項標的者，其價額合併計算之。但所主張之數項標的互相競合或應為選擇者，其訴訟標的價額，應依其中價額最高者定之。以一訴附帶請求其孳息、損害賠償、違約金或費用者，不併算其價額。
 
@@ -298,9 +306,9 @@
 
 > 釋：一、本條新增。二、第一項係原民事訴訟費用法第二十二條移列修正。原民事訴訟費用法第二條已移列為第七十七條之十三，且第七十七條之二十第一項已增設聲請調解應徵收聲請費之規定，爰將原條文「第二條」修正為「第七十七條之十三」，並增訂「以支付命令之聲請視為聲請調解者，仍應依第七十七條之二十規定全額徵收聲請費」之旨，以資配合。又關於以調解之聲請視為起訴時仍應徵收裁判費之問題，增訂之第七十七條之二十第二項已另設明文，爰將原條文有關此部分之文字刪除，俾免重複。三、為避免同一事件重複徵收費用，影響當事人行使權利，爰增訂第二項，規定於以支付命令之聲請視為起訴或聲請調解之情形，當事人得以聲請支付命令時已繳之裁判費，扣抵起訴所應徵收之裁判費或聲請調解所應徵收之聲請費。
 
-* 77.22 依第四十四條之二請求賠償之人，其裁判費超過新臺幣六十萬元部分暫免徵收。依第四十四條之三規定請求者，免徵裁判費。第一項暫免徵收之裁判費，第一審法院應於該事件確定後，依職權裁定向負擔訴訟費用之一造徵收之。
+* 77.22 依第四十四條之二請求賠償之人，其裁判費超過新臺幣六十萬元部分暫免徵收。依第四十四條之三規定請求者，免徵裁判費。依第一項或其他法律規定暫免徵收之裁判費，第一審法院應於該事件確定後，依職權裁定向負擔訴訟費用之一造徵收之。
 
-> 釋：一、本條係新增。二、本法第四十四條之二及第四十四條之三之訴訟型態，宜比照消費者保護法規定減免徵收裁判費，爰訂定第一項規定依第四十四條之二請求賠償之人，其訴訟費用超過六十萬元之部分暫免徵收；第二項規定依第四十四條之三規定請求者，免徵裁判費。三、關於暫免徵收裁判費者，於事件確定後，應有徵收規定，爰增訂第三項規定於該事件確定後，第一審法院應依職權裁定向負擔訴訟費用之一造徵收之。
+> 釋：因邇來新增訂之部分法規（如犯罪被害人保護法）規定原告於起訴時得暫免繳納一部或全部之裁判費，故於事件確定後，應有徵收規定，爰修訂第三項，規定依其他法律暫免徵收之裁判費，於該事件確定後，第一審法院亦應依職權裁定向負擔訴訟費用之一造徵收之。
 
 * 77.23 訴訟文書之影印費、攝影費、抄錄費、翻譯費，證人、鑑定人之日費、旅費及其他進行訴訟之必要費用，其項目及標準由司法院定之。運送費、登載公報新聞紙費及法院核定之鑑定人報酬，依實支數計算。命當事人預納之前二項費用，應專就該事件所預納之項目支用，並得由法院代收代付之。有剩餘者，應於訴訟終結後返還繳款人。郵電送達費及法官、書記官、執達員、通譯於法院外為訴訟行為之食、宿、舟、車費，不另徵收。
 
@@ -314,9 +322,9 @@
 
 > 釋：一、本條係新增。二、依第四百六十六條之二第一項、第五百八十五條第一項之規定，法院或審判長得為當事人選任律師為訴訟代理人，又法院或審判長依第五十一條、第三百七十四條之規定為當事人選任特別代理人時，亦得斟酌情形選任律師為之，其律師之酬金，自應由法院或審判長酌定，爰於第一項明定之，俾利適用。三、前項訴訟代理人、特別代理人並非當事人所選任，又第三審上訴採律師強制代理制度，其律師之酬金均應作為訴訟費用之一部，依本章第三節之規定定其負擔。為使上述法院或審判長選任律師之酬金，及當事人於第三審選任律師之酬金公平合理，應由司法院根據社會經濟狀況，並參酌法務部及中華民國律師公會全國聯合會之意見，就上開選任律師酬金之支給、給付方法，及其最高限額，統一訂定標準，爰規定第二項。
 
-* 77.26 訴訟費用如有溢收情事者，法院應依聲請並得依職權以裁定返還之。前項聲請，至遲應於裁判確定或事件終結後三個月內為之。
+* 77.26 訴訟費用如有溢收情事者，法院應依聲請並得依職權以裁定返還之。前項聲請，至遲應於裁判確定或事件終結後三個月內為之。裁判費如有因法院曉示文字記載錯誤或其他類此情形而繳納者，得於繳費之日起五年內聲請返還，法院並得依職權以裁定返還之。
 
-> 釋：一、本條係新增。二、訴訟費用如因誤會或其他原因而有溢收情事者，當然應返還之。爰於第一項規定法院應依聲請並得依職權以裁定返還之，俾資適用。三、為使當事人間有關訴訟費用之賠償額早日確定，聲請返還訴訟費用之期間宜加限制。爰於第二項規定前項聲請，至遲應於裁判確定或事件終結後三個月內為之。
+> 釋：一、本條第一項及第二項係九十二年二月七日增訂，於立法理由中雖載明「訴訟費用如因誤會或其他原因而有溢收情事者，當然應返還之」，惟目前實務上偶有當事人因法院曉示文字記載錯誤或其他類此情形，而當事人信賴上開記載繳納裁判費（例如屬不得上訴第三審之事件，但判決書內卻誤載為得上訴第三審，致當事人提起上訴並繳納裁判費後，遭原審或最高法院駁回之情事），上開情形能否適用本條第一項之規定，尚非明確。二、因當事人係信賴法院文書之記載，方為相關之訴訟行為並繳納裁判費，法院收受上開裁判費後若不返還，顯非合理，為保障當事人之權益，爰參酌規費法第十八條第一項規定，增訂第三項。三、本條第一項適用之情形為當事人自行向法院繳納訴訟費用，致生溢收之情事；若有法院曉示文字錯誤或其他類此情形，致當事人因而繳納裁判費之情事，則應適用第三項之規定，併此說明。
 
 * 77.27 本法應徵收之裁判費，各高等法院得因必要情形，擬定額數，報請司法院核准後加徵之。但其加徵之額數，不得超過原額數十分之五。
 
@@ -690,7 +698,9 @@
 
 * 173 第一百六十八條、第一百六十九條第一項及第一百七十條至前條之規定，於有訴訟代理人時不適用之。但法院得酌量情形，裁定停止其訴訟程序。
 
-* 174 當事人受破產之宣告者，關於破產財團之訴訟程序，在依破產法有承受訴訟人或破產程序終結以前當然停止。
+* 174 當事人受破產之宣告者，關於破產財團之訴訟程序，在依破產法有承受訴訟人或破產程序終結以前當然停止。當事人經法院依消費者債務清理條例裁定開始清算程序者，關於清算財團之訴訟程序，於管理人承受訴訟或清算程序終止、終結以前當然停止。
+
+> 釋：一、第一項未修正。二、按依消費者債務清理條例第九十四條第一項規定，債務人因法院裁定開始清算程序，對於應屬清算財團之財產，喪失其管理及處分權。又依同條例第二十八條第一項、第二項之規定，對於債務人之債權，於法院裁定開始清算程序前成立者，為清算債權，非依清算程序，不得行使其權利。故當事人經法院依消費者債務清理條例裁定開始清算程序者，關於清算財團之訴訟程序，於管理人承受訴訟前或清算程序終止、終結前，自應當然停止，爰增設第二項。
 
 * 175 第一百六十八條至第一百七十二條及前條所定之承受訴訟人，於得為承受時，應即為承受之聲明。他造當事人，亦得聲明承受訴訟。
 
@@ -714,9 +724,9 @@
 
 > 釋：訴訟全部或一部之裁判，以應依行政爭訟程序確定之法律關係是否成立為據者，為避免相互歧異，法院亦得於行政爭訟程序開始後終結前以裁定停止訴訟程序。原條文第二項規定「應由法院以外之機關」，是否包括行政法院，不無爭議，且易被誤會為包括司法院大法官之解釋，爰予修正，俾資明確。又其他法律如就裁定停止訴訟程序有特別規定者，例如商標法第六十條、專利法第九十四條，自應從其規定，爰增設但書規定，以利適用。
 
-* 182.1 普通法院就其受理訴訟之權限，如與行政法院確定裁判之見解有異時，應以裁定停止訴訟程序，聲請司法院大法官解釋。但當事人合意願由普通法院為裁判者，由普通法院裁判之。前項合意，應以文書證之。
+* 182.1 普通法院就其受理訴訟之權限，如與行政法院確定裁判之見解有異時，應以裁定停止訴訟程序，並聲請司法院大法官解釋。但當事人合意願由普通法院為裁判者，由普通法院裁判之。經司法院大法官解釋普通法院無受理訴訟權限者，普通法院應將該訴訟移送至有受理訴訟權限之法院。第一項之合意，應以文書證之。
 
-> 釋：一、本條係新增。二、當事人就行政法院裁判確定不屬其權限之同一事件，向普通法院為請求時，如普通法院依其合理之確信亦認為不屬其權限而予以駁回，當事人之權利即無救濟之途，爰於第一項規定，此種情形，法院應以裁定停止訴訟程序，提出其確信普通法院無審判權限之具體理由，聲請司法院大法官解釋。惟停止訴訟程序，聲請解釋，不免曠日費時，有損當事人之權益，爰增訂但書，明定如當事人兩造合意願由普通法院為裁判者，則認為普通法院就該事件有審判之權限。三、前項合意，涉及審判權之歸屬，為期慎重，爰於第二項規定前項合意應以文書證之。
+> 釋：一、第一項未修正。二、普通法院如依第一項聲請司法院大法官解釋，如確定其有審判權，則由其審判；如確定其無審判權，則其他法院之移送裁定失其效力，應由普通法院將訴訟移送至有審判權之其他法院，爰參酌行政訴訟法第十二條之二第四項規定意旨，增訂第二項規定，明定普通法院之處理方式。三、因增訂第二項，故原第二項移列為第三項，並為文字修正。
 
 * 182.2 當事人就已繫屬於外國法院之事件更行起訴，如有相當理由足認該事件之外國法院判決在中華民國有承認其效力之可能，並於被告在外國應訴無重大不便者，法院得在外國法院判決確定前，以裁定停止訴訟程序。但兩造合意願由中華民國法院裁判者，不在此限。法院為前項裁定前，應使當事人有陳述意見之機會。
 
@@ -962,9 +972,9 @@
 
 * 248 對於同一被告之數宗訴訟，除定有專屬管轄者外，得向就其中一訴訟有管轄權之法院合併提起之。但不得行同種訴訟程序者，不在此限。
 
-* 249 原告之訴，有下列各款情形之一者，法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬普通法院之權限者。二、訴訟事件不屬受訴法院管轄而不能為第二十八條之裁定者。三、原告或被告無當事人能力者。四、原告或被告無訴訟能力，未由法定代理人合法代理者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴不合程式或不備其他要件者。七、起訴違背第二百五十三條、第二百六十三條第二項之規定，或其訴訟標的為確定判決之效力所及者。原告之訴，依其所訴之事實，在法律上顯無理由者，法院得不經言詞辯論，逕以判決駁回之。前項情形，法院得處原告新臺幣六萬元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
+* 249 原告之訴，有下列各款情形之一，法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬普通法院之權限，不能依第三十一條之二第二項規定移送者。二、訴訟事件不屬受訴法院管轄而不能為第二十八條之裁定者。三、原告或被告無當事人能力者。四、原告或被告無訴訟能力，未由法定代理人合法代理者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴不合程式或不備其他要件者。七、起訴違背第三十一條之一第二項、第二百五十三條、第二百六十三條第二項之規定，或其訴訟標的為確定判決之效力所及者。原告之訴，依其所訴之事實，在法律上顯無理由者，法院得不經言詞辯論，逕以判決駁回之。前項情形，法院得處原告新臺幣六萬元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
 
-> 釋：一、第一項﹁左列﹂修正為﹁下列﹂。二、邇來濫訴之情形相當嚴重，不但對被告造成勞力、時間、費用之浪費，並造成其精神上之痛苦，亦增加法院之負擔，浪費司法資源，為防免上述情形發生，有效遏止濫訴情事，有予以適當制裁之必要。又原告如無訴訟能力，其訴訟係由其法定代理人代為提起，原告之訴，亦有由訴訟代理人慫恿蠱惑而代為提起者，為處罰實際為訴訟行為之人，爰增訂第三項規定，由法院視其情形處罰原告或其法定代理人或訴訟代理人。三、為保障受罰鍰裁定人之程序上權利，於第四項明定對於第三項處罰鍰之裁定得為抗告，於抗告中應停止執行。
+> 釋：一、參酌司法院釋字第五四○號解釋意旨及配合行政訴訟法已增訂審判權錯誤採移送制度，故本條第一項第一款後段增訂訴訟事件雖不屬普通法院審判之權限，但若合於第三十一條之二第二項規定者，普通法院應為移送，不得依本款規定以裁定駁回。二、因增訂之第三十一條之一第二項規定：訴訟已繫屬於不同審判權之法院者，當事人不得就同一事件向普通法院更行起訴。故當事人若有上開情事，再向普通法院起訴者，法院應以裁定駁回之，爰修訂本條第一項第七款之規定。
 
 * 250 法院收受訴狀後，審判長應速定言詞辯論期日。但應依前條之規定逕行駁回，或依第二十八條之規定移送他法院，或須行書狀先行程序者，不在此限。
 
@@ -2066,9 +2076,9 @@
 
 > 釋：一、第一項之「推事」修正為「法官」。二、依第一項之規定，繫屬於第三審法院或繫屬於第二審法院而不得上訴第三審法院之事件，將因審級關係，對受命法官、受託法官之裁定，無從提出異議。為貫徹合議審判之精神及保障受裁定人程序上之權利，爰增訂第四項，明定就此等裁定，仍得分向第三審法院或第二審受訴法院提出異議。
 
-* 486 抗告，除別有規定外，由直接上級法院裁定。抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用第四百八十四條第二項及第三項之規定。除前二項之情形外，對於抗告法院之裁定再為抗告，僅得以其適用法規顯有錯誤為理由，並經原法院之許可者為限。前項許可，以原裁定所涉及之法律見解具有原則上之重要性者為限。第四百三十六條之三第三項、第四項及第四百三十六條之六之規定，於第四項之抗告準用之。
+* 486 抗告，除別有規定外，由直接上級法院裁定。抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用第四百八十四條第二項及第三項之規定。除前二項之情形外，對於抗告法院之裁定再為抗告，僅得以其適用法規顯有錯誤為理由。第四百三十六條之六之規定，於前項之抗告準用之。
 
-> 釋：一、依第四百九十條第一項及第四百九十五條之一第一項準用第四百四十二條第一、二項之規定，原法院或審判長就有理由、不合法之抗告，應分別為撤銷、變更原裁定或駁回抗告之裁定；又適用簡易、小額訴訟程序之抗告，依第四百三十六條之一第一項、第四百三十六條之二十四第一項、第四百三十六條之二第一項規定，得由同級之地方法院合議庭，或越級由最高法院裁定（對於簡易程序第二審裁判之抗告），足見抗告並非均由直接上級法院裁定。爰於第一項增列「除別有規定外」等字，以符實際。二、抗告合法與否，其判斷較不生爭執，為合理分配司法資源，爰於第二項明定。惟為保障抗告人之權利，另增設但書，規定對於上開裁定得向原法院提出異議。三、第四百八十四條第二項及第三項之規定，就依前項規定提出異議者，應可準用，爰增訂第三項，俾資遵循。四、為維持第三審為法律審之特性，並兼顧保障當事人權利及合理分配司法資源之要求，對於抗告法院以抗告有理由而廢棄或變更原裁定之裁定，或以抗告無理由而駁回抗告之裁定，應以其適用法規顯有錯誤為理由，並經原法院許可者為限，始得再為抗告，爰增訂第四項明定之。五、抗告法院依前項規定許可再為抗告，應以原裁定所涉及之法律見解具有原則上之重要性者為限，爰增訂第五項。六、第四百三十六條之三第三項、第四項及第四百三十六條之六之規定，於第四項之抗告，應可準用。亦即抗告法院認為應行許可再抗告者，應添具意見書，敘明許可之理由，將卷宗送最高法院；認為不應許可再抗告者，應以裁定駁回再抗告；對於駁回再抗告之裁定，得向最高法院抗告；提起再抗告，經以抗告無理由駁回者，不得更以同一理由聲請再審。
+> 釋：一、修正原第四項、第六項規定，並刪除原第五項規定。二、由抗告法院審查其裁定適用法規是否顯有錯誤，並許可抗告人之抗告，無異要求抗告法院自承其裁定有錯誤，實非易事，且對於再抗告人不公平。又依原第六項前段規定準用結果，抗告法院審查後，若認原裁定適用法規顯有錯誤，且再抗告應予許可者，應添具意見書；若認原裁定適用法規並無顯有錯誤，不應許可再抗告者，應裁定駁回再抗告，惟再抗告人對該裁定又可抗告，且最高法院不受抗告法院上開審查結果之拘束，故抗告法院之審查是否有必要即有待商榷。除了增加抗告法院之工作負擔外，亦增加再抗告人之訟累，造成抗告程序之繁複。爰修正第四項，將「並經原法院之許可者為限」刪除；修正第六項為：「第四百三十六條之六之規定，於前項之抗告準用之」，並移列第五項規定；將原第五項規定刪除。
 
 * 487 提起抗告，應於裁定送達後十日之不變期間內為之。但送達前之抗告，亦有效力。
 
@@ -2196,9 +2206,9 @@
 
 > 釋：一、原條文本文「左列」修正為「下列」，列為第一項。並配合第五百十一條之修正，修正第一款文字。二、債務人向債權人清償其請求及賠償程序費用之時期，非訴訟法上之不變期間，而向法院提出異議期間，始為訴訟法上之不變期間，爰將第二款作文字修正。三、當事人聲請支付命令所表明第五百十一條第三款所定之事項，如其聲請書狀之記載完整，應許法院以之作為附件代替該項記載，以利迅速處理，並減輕法院之負擔，爰增訂第二項。
 
-* 515 發支付命令後，三個月內不能送達於債務人者，其命令失其效力。
+* 515 發支付命令後，三個月內不能送達於債務人者，其命令失其效力。前項情形，法院誤發確定證明書者，自確定證明書所載確定日期起五年內，經撤銷確定證明書時，法院應通知債權人。如債權人於通知送達後二十日之不變期間起訴，視為自支付命令聲請時，已經起訴；其於通知送達前起訴者，亦同。前項情形，督促程序費用，應作為訴訟費用或調解程序費用之一部。
 
-> 釋：一、第一項規定原係配合六十年修正前之第五百十七條、第五百二十條有關債權人得聲請宣告假執行之規定而設，該二條文前經刪除，本項亦無存在必要，爰予刪除。二、前項既經刪除，爰將第二項獨立成一條文。
+> 釋：一、第一項未修正。二、因債權人聲請發支付命令時，即有行使權利之意思，時效應予中斷，但目前實務上常有法院以支付命令已合法送達而核發確定證明書，嗣後因債務人抗辯未合法送達，經查明屬實，而將確定證明書撤銷，致發生支付命令不能於核發後三個月內送達債務人，依本條第一項規定支付命令失其效力。又民法第一百三十二條規定支付命令失其效力時，時效視為不中斷，因而造成債權人不利之情形，影響債權人聲請發支付命令之意願。三、在兼顧債權人權益之保障與債務人時效利益之前提下，爰增訂第二項，規定如有未經合法送達，而法院誤發確定證明書者，自確定證明書所載確定日期起五年內，經撤銷確定證明書時，法院應通知債權人，且債權人如於通知送達後二十日之不變期間起訴者，視為自支付命令聲請時，已經起訴；其於通知送達前起訴者亦同。第二項所稱之「五年」係參考民事訴訟法第五百條提起再審期間之規定訂定。四、債權人若為本條第二項之起訴者，自應視其聲請支付命令之金額多寡而進行訴訟程序或以起訴視為調解之聲請，原督促程序之費用，自應作為訴訟費用或調解程序費用之一部分，爰增訂第三項。
 
 * 516 債務人對於支付命令之全部或一部，得於送達後二十日之不變期間內，不附理由向發命令之法院提出異議。債務人得在調解成立或第一審言詞辨論終結前，撤回其異議。但應負擔調解程序費用或訴訟費用。
 
