--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -62,6 +62,10 @@
 
 * 17 本法所稱自來水事業，係指本法規定以經營自來水為目的之事業。
 
+* 17.1 本法所稱簡易自來水事業，係指自行開發水源或經合法取得水權，且自行設置及管理簡易供水處理系統，作為自來水使用之組織團體或事業經營體。
+
+> 釋：一、本條新增。二、明訂簡易自來水事業之定義。
+
 * 18 本法所稱自來水事業負責人，在公營自來水事業，依其事業本身有關法令之規定；在民營自來水事業，依公司法之規定。
 
 * 19 本法所稱自來水事業專營權，係指經主管機關核准，於特定供水區域內，經營自來水事業之權。
@@ -72,7 +76,9 @@
 
 * 22 本法所稱自來水用戶，係指依自來水事業營業章程之規定接用自來水者。
 
-* 23 本法所稱用水設備，係指自來水用戶，因接用自來水所裝設之進水管、量水器、受水管、開關、分水支管、衛生設備之連接水管及水栓、水閥等。
+* 23 本法所稱用水設備，係指自來水用戶，因接用自來水所裝設之進水管、量水器、受水管、開關、分水支管、衛生設備之連接水管及水栓、水閥及加壓設施等。前項加壓設施中屬自來水事業依本法第六十一條規定無法供水者，自來水用戶為接用自來水，於總表後至建築物前所設置之加壓設備、蓄（配）水池、操作室、受水管、開關及水栓等設備，統稱為用戶加壓受水設備。
+
+> 釋：一、高地社區自設水管及其他供水設施，接用自來水源供應自來水之性質，其歸類應屬自來水用戶用水設備，爰於本條增訂「加壓設施」項目。二、增訂第二項，說明第一項「加壓設施」之內涵，包括自來水用戶於建築物內、外設置之個、群戶加壓設備，並增訂加壓受水設備定義，以明確規範用戶自行於建築物前設置加壓設施、蓄（配）水池及受水管等設備之範疇。
 
 * 24 興辦自來水事業者，應依水利法之規定，向水利主管機關申請水權登記，暨與水權、水源有關之水利建造物之建造、改造或拆除之核准。前項申請，應由自來水事業主管機關核轉之。
 
@@ -193,6 +199,10 @@
 > 釋：照黨團協商條文通過。
 
 * 61 自來水事業在其供水區域內，對於請求供水者，非有正當理由，不得拒絕。前項請求供水者，對拒絕供水如有異議，得申請主管機關核定之。
+
+* 61.1 第二十三條規定之用戶加壓受水設備所使用之土地應於興建完成時移轉為用戶所有或設定地上權予用戶後，始得供水；用戶加壓受水設備所使用之土地非屬用戶所有，但使用年限已達十年以上者，其用戶就該等土地視為有地上權存在，並得於取得土地所有權前為必要之維護更新。前項加壓受水設備委託自來水事業代管者，自來水事業得計收工程改善費、操作維護費及其他一切必要之費用，其標準由自來水事業訂定，報請主管機關備查。
+
+> 釋：一、本條新增，為使加壓受水設備所有權與使用權合一，以避免紛爭，爰規定取得土地所有權或地上權為供水之要件。二、為保障既有加壓受水設備用戶之使用自來水權利，參照本地第110條之1規定，使用年限已達十年以上者，於取得土地所有權之前，得為必要之維護更新。三、第二項為明定加壓受水設備委託自來水事業代管者，其所發生之支出費用，由自來水事業訂定之。
 
 * 62 自來水事業對自來水用戶應經常供水，如因災害、緊急措施或工程施工而停止全部或一部供水時，應將停水區域及時間事先通告周知，並呈報所在地主管機關核備；但停止供水事故係臨時發生者，得於事後補報。其有特殊情形必須連續停水達十二小時以上或定時供水者，應先申請所在地主管機關核准，並公告周知。自來水用戶對於前項停止供水，不得要求任何損失賠償。
 
