--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -478,9 +478,9 @@
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
-* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。股份有限公司之最低資本總額，由中央主管機關以命令定之。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
+* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。股份有限公司之最低資本總額，由中央主管機關以命令定之。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。公司設立後，為改善財務結構或回復正常營運，而參與政府專案核定之紓困方案時，得發行新股轉讓於政府，作為接受政府財務上協助之對價；其發行程序不受本法有關發行新股規定之限制，其相關辦法由中央主管機關定之。前項紓困方案達新臺幣十億元以上者，應由專案核定之主管機關會同受紓困之公司，向立法院報告其自救計畫。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
 
-> 釋：一、授權資本制之最大優點，在使公司易於迅速成立，公司資金之籌措趨於方便，公司亦無須閒置超過其營運所需之巨額資金，爰自現行折衷式之授權資本制改採授權資本制。又實務上，為因應新金融商品之發行，避免企業計算股份總數四分之一之不便，爰刪除原條文第二項但書之規定。二、第五項作文字修正。三、配合第二項及第二百七十八條第二項之修正，爰於第六項酌作修正，俾資周延。
+> 釋：一、增列第七項。係參考最近美國7000億美金紓困方案之監管理念，於公司參與政府專案核定之紓困方案時，允許政府得受讓參與紓困公司所發行之新股股權，以使全國納稅人在日後可分享企業紓困成功後之獲利。二、其發行程序不受本法有關發行新股規定之限制者，係指公司發行新股原本歸屬於企業自治事項，然公司在參與政府專案核定之紓困方案時，已有公權力介入之情形，此時對於企業自治行為應予適度緩和，故授權由中央主管機關就新股發行程序訂立相關辦法，以茲適用。三、增列第八項。受紓困金額達新臺幣一億元以上未滿十億元者，應報立法院備查。四、原第八項項次遞延為第九項。五、本條其他條文未修正，僅酌作項次調整。
 
 * 157 公司發行特別股時，應就左列各款於章程中定之：一、特別股分派股息及紅利之順序、定額或定率。二、特別股分派公司賸餘財產之順序、定額或定率。三、特別股之股東行使表決權之順序、限制或無表決權。四、特別股權利、義務之其他事項。
 
@@ -662,7 +662,9 @@
 
 > 釋：按公司與董事間之關係，依民法委任契約期間屆滿，公司本應召集股東會改選之。然實務上，因公司經營權之爭致遲遲未為改選之事例，比比皆是，為保障股東之權益，促進公司業務正常經營，以貫徹本條之立法目的，爰修正第二項。
 
-* 196 董事之報酬，未經章程訂明者，應由股東會議定。
+* 196 董事之報酬，未經章程訂明者，應由股東會議定，不得事後追認。第二十九條第二項之規定，對董事準用之。
+
+> 釋：一、原公司法第一百九十六條規定，董事之報酬，章程未訂明者，應由股東會決議定之。本條原意為避免董事利用其為公司經營者之地位與權利，恣意索取高額報酬，故不以董事會決議為足，而須將董事報酬委由章程與股東會決議定之。二、然而現行實務上由於我國公司股權結構係屬於相對集中之類型，其結果是公司的董監事大多由大股東兼任，因此多有公司監督制衡機制失靈之情形，公司董事與監事勾結，自行恣意給與高額報酬，無法透過市場機制形成公正的金額，從而可能連帶造成公司營運不佳之虧損。三、因此，在公司參與政府專案核定之紓困方案時，其董事之報酬應由主管機關訂立法定上限之相關辦法，以免造成公司在有營運不佳情形，其董事仍得恣意索取高額報酬之不公，爰特於第一百九十六條增訂第二項，準用第二十九條第二項之規定。四、就公開發行股票公司監察人部分，依本法第二百二十七條準用董事規定之結果，在公司參與政府專案核定之紓困方案時，其報酬亦受有法定限制。
 
 * 197 董事經選任後，應向主管機關申報，其選任當時所持有之公司股份數額；公開發行股票之公司董事在任期中轉讓超過選任當時所持有之公司股份數額二分之一時，其董事當然解任。董事在任期中其股份有增減時，應向主管機關申報並公告之。董事任期未屆滿提前改選者，當選之董事，於就任前轉讓超過選任當時所持有之公司股份數額二分之一時，或於股東會召開前之停止股票過戶期間內，轉讓持股超過二分之一時，其當選失其效力。
 
