--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -306,9 +306,9 @@
 
 * 99 各股東對於公司之責任，以其出資額為限。
 
-* 100 公司資本總額，應由各股東全部繳足，不得分期繳款或向外招募。有限公司之最低資本總額，由中央主管機關以命令定之。
+* 100 公司資本總額，應由各股東全部繳足，不得分期繳款或向外招募。
 
-> 釋：有限公司之最低資本總額一律由中央主管機關以命令定之，爰於第二項增加「中央」二字，並刪除「分別性質，斟酌情形」文字。
+> 釋：一、原條文第一項未修正，列為本條文。二、原條文第二項刪除，理由如下：(一)按公司最低資本額之規定，係要求公司於設立登記時，最低資本須達一定數額，方得設立。惟資本僅為一計算上不變之數額，與公司之現實財產並無必然等同之關係；同時資本額為公示資訊，交易相對人可透過登記主管機關之資訊網站得知該項資訊，作為交易時之判斷；再者，公司申請設立登記時，其資本額仍應先經會計師查核簽證，如資本額不敷設立成本，造成資產不足抵償負債時，董事會應即聲請宣告破產，公司登記機關依本法第三百八十八條規定將不予登記。爰此，資本額如足敷公司設立時之開辦成本即准予設立，有助於公司迅速成立，亦無閒置資金之弊，該數額宜由個別公司因應其開辦成本而自行決定，尚不宜由主管機關統一訂定最低資本額。(二)又依據世界銀行公元二○○八年九月發布「二○○九全球經商環境報告」中有關「最低資本額」之調查指出，我國「最低資本額」占國人平均所得百分之一百以上，於世界排名為第一五七名。為改善我國經商環境，促進企業開辦，公司資本額應以經會計師查核簽證認定資本額足敷設立成本即可，爰刪除第二項。
 
 * 101 公司章程應載明左列事項：一、公司名稱。二、所營事業。三、股東姓名或名稱、住所或居所。四、資本總額及各股東出資額。五、盈餘及虧損分派比例或標準。六、本公司所在地；設有分公司者，其所在地。七、董事人數。八、定有解散事由者，其事由。九、訂立章程之年、月、日。代表公司之董事不備置前項章程於本公司者，處新臺幣一萬元以上五萬元以下罰鍰。連續拒不備置者，並按次連續處新臺幣二萬元以上十萬元以下罰鍰。
 
@@ -478,9 +478,9 @@
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
-* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。股份有限公司之最低資本總額，由中央主管機關以命令定之。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。公司設立後，為改善財務結構或回復正常營運，而參與政府專案核定之紓困方案時，得發行新股轉讓於政府，作為接受政府財務上協助之對價；其發行程序不受本法有關發行新股規定之限制，其相關辦法由中央主管機關定之。前項紓困方案達新臺幣十億元以上者，應由專案核定之主管機關會同受紓困之公司，向立法院報告其自救計畫。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
+* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。公司設立後，為改善財務結構或回復正常營運，而參與政府專案核定之紓困方案時，得發行新股轉讓於政府，作為接受政府財務上協助之對價；其發行程序不受本法有關發行新股規定之限制，其相關辦法由中央主管機關定之。前項紓困方案達新臺幣十億元以上者，應由專案核定之主管機關會同受紓困之公司，向立法院報告其自救計畫。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
 
-> 釋：一、增列第七項。係參考最近美國7000億美金紓困方案之監管理念，於公司參與政府專案核定之紓困方案時，允許政府得受讓參與紓困公司所發行之新股股權，以使全國納稅人在日後可分享企業紓困成功後之獲利。二、其發行程序不受本法有關發行新股規定之限制者，係指公司發行新股原本歸屬於企業自治事項，然公司在參與政府專案核定之紓困方案時，已有公權力介入之情形，此時對於企業自治行為應予適度緩和，故授權由中央主管機關就新股發行程序訂立相關辦法，以茲適用。三、增列第八項。受紓困金額達新臺幣一億元以上未滿十億元者，應報立法院備查。四、原第八項項次遞延為第九項。五、本條其他條文未修正，僅酌作項次調整。
+> 釋：一、原條文第一項及第二項未修正。二、原條文第三項刪除，理由如下：(一)按公司最低資本額之規定，係要求公司於設立登記時，最低資本須達一定數額，方得設立。惟資本僅為一計算上不變之數額，與公司之現實財產並無必然等同之關係；同時資本額為公示資訊，交易相對人可透過登記主管機關之資訊網站得知該項資訊，作為交易時之判斷；再者，公司申請設立登記時，其資本額仍應先經會計師查核簽證，如資本額不敷設立成本，造成資產不足抵償負債時，董事會應即聲請宣告破產，公司登記機關依本法第三百八十八條規定將不予登記。爰此，資本額如足敷公司設立時之開辦成本即准予設立，有助於公司迅速成立，亦無閒置資金之弊，該數額宜由個別公司因應其開辦成本而自行決定，尚不宜由主管機關統一訂定最低資本額。(二)又依據世界銀行公元二○○八年九月發布「二○○九全球經商環境報告」中有關「最低資本額」之調查指出，我國「最低資本額」占國人平均所得百分之一百以上，於世界排名為第一五七名。為改善我國經商環境，促進企業開辦，公司資本額應以經會計師查核簽證認定資本額足敷設立成本即可，爰刪除第三項。三、原條文第四項至第九項，移列為修正條文第三項至第八項，內容未修正。
 
 * 157 公司發行特別股時，應就左列各款於章程中定之：一、特別股分派股息及紅利之順序、定額或定率。二、特別股分派公司賸餘財產之順序、定額或定率。三、特別股之股東行使表決權之順序、限制或無表決權。四、特別股權利、義務之其他事項。
 
